--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,4 +1,7 @@
 {
+  // environment image
+  "image": "lorisleiva/laravel-docker",
+
   // install laravel extensions 
   "extensions": [
     "absszero.vscode-laravel-goto",
@@ -9,10 +12,14 @@
   
   // configure environment
   "settings": {
+    "files.autoSave": "off",
     "emmet.triggerExpansionOnTab": true,
     "blade.format.enable": true,
     "[blade]": {
       "editor.autoClosingBrackets": "always"
     },
   },
+  
+  // execute post create script
+  "postCreateCommand": "/bin/bash ./.devcontainer/post-create.sh > ~/post-create.log",
 }
