--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,5 +17,7 @@
     "[blade]": {
       "editor.autoClosingBrackets": "always"
     }
-  }
+  },
+  
+  "postCreateCommand": "/bin/bash ./.devcontainer/post-create.sh > ~/post-create.log",
 }
