feat: install the php intellisense extension

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,6 +3,7 @@
   "image": "bitnami/laravel",
   
   "extensions": [
+    "felixfbecker.php-intellisense",
     "absszero.vscode-laravel-goto",
     "mohamedbenhida.laravel-intellisense",
     "ryannaddy.laravel-artisan",
