--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
-  "name": "Laravel Bitnami Codespace",
-  "image": "bitnami/laravel",
+  "name": "Laravel Codespace",
+  "image": "eliurkis/laravel",
   
   "extensions": [
     "felixfbecker.php-intellisense",
@@ -11,7 +11,7 @@
   ],
   
   "settings": {
-    "terminal.integrated.shell.linux": "/bin/bash",
+    //"terminal.integrated.shell.linux": "/bin/bash",
     "files.autoSave": "off",
     "emmet.triggerExpansionOnTab": true,
     "blade.format.enable": true,
@@ -20,5 +20,5 @@
     }
   },
   
-  "postCreateCommand": "/bin/bash ./.devcontainer/post-create.sh > ~/post-create.log",
+  //"postCreateCommand": "/bin/bash ./.devcontainer/post-create.sh > ~/post-create.log",
 }
