ref: changed the intellisense and added a namespace resolver

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,8 @@
   "image": "eliurkis/laravel",
   
   "extensions": [
-    "felixfbecker.php-intellisense",
+    "bmewburn.vscode-intelephense-client",
+    "mehedidracula.php-namespace-resolver",
     "absszero.vscode-laravel-goto",
     "mohamedbenhida.laravel-intellisense",
     "ryannaddy.laravel-artisan",
